--- a/address-service.properties
+++ b/address-service.properties
@@ -8,3 +8,5 @@ spring.datasource.driver.class-name=com.mysql://cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761
+
+spring.boot.message=hello,welcome message
